# library

./: .gitignore  info.md  instructions.md  test.md  test2.md  test3.md  test4.md  test5.md
python_files/: README.md  examples.py  info2.md  main.py  pyproject.toml  route.py  run_homease_agent.py  run_homease_orchestrator.py  skill.md  test_fork_tools.py
python_files/logs/20251214_033728/: agent_tools.json
python_files/logs/20251214_034636/: agent_tools.json
python_files/logs/20251214_034807/: agent_tools.json
python_files/logs/20251214_035035/: agent_tools.json
python_files/logs/20251214_095637/: agent_tools.json
python_files/logs/20251214_173506/: agent_tools.json
python_files/more/: agent_tools_integration.py  coding_team.py  skill_patrern.py
python_files/new/: best_of_n.py  context_cached_agent.py  orch_with_rfd.py  orchestrator.py  progressive_disclosure.py
python_files/skill/: __init__.py  context_aware_skill_system.py
python_files/skill/skills/gemini-agent-fork/: skill.md
python_files/skill/skills/gemini-agent-fork/cookbook/: code_agent.md  gemini_agent.md  parallel_swarm.md  research_agent.md
python_files/skill/skills/gemini-agent-fork/prompts/: fork_summary_user_prompt_template.md
python_files/skills/: skill_loader.py
python_files/test_workspace/: hello.txt  orchestrator_skill.py  task_router.py
python_files/tools/: agent_fork.py  context_summarizer.py  file_system_tools.py  logging_config.py  orchestrator.py  parallel_agent_swarm.py
